[package]
name = "lyra"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.25"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1", features = ["full"] }
tui = "0.19"
