[package]
name = "lyra"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.25"
ratatui = "0.26.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1", features = ["full"] }
unicode-truncate = "0.1"
